# api-data

./: .env.dev  Dockerfile  README.md  pyproject.toml  validate.sh
app/: main.py
app/adapters/: data_adapter.py
app/controller/: controller.py
app/core/: config.py
app/models/: schemas.py  user.py
app/services/: services.py
app/utils/: utils.py
tests/: test_api.py  test_controller.py  test_data_adapter.py  test_main.py  test_services.py  test_user.py
